@@ -16,6 +16,10 @@ J2="2"
 J3="3"
 J4="4"
 J5="5"
+J6="6"
+J7="7"
+J8="8"
+J9="9"
 J10="10"
 J15="15"
 J20="20"
