@@ -16,6 +16,10 @@ J2="2"
 J3="3"
 J4="4"
 J5="5"
+J6="6"
+J7="7"
+J8="8"
+J9="9"
 J10="10"
 J15="15"
 J20="20"
@@ -197,6 +201,9 @@ JGLOBAL_ALLOW_COMMENTS_DESC="If Yes, viewers will be able to add and view commen
 JGLOBAL_ALLOW_COMMENTS_LABEL="Allow Comments"
 JGLOBAL_ALLOW_RATINGS_DESC="If Yes, viewers will be able to add and view ratings for the article."
 JGLOBAL_ALLOW_RATINGS_LABEL="Allow Ratings"
+JGLOBAL_ARCHIVE_ARTICLES_FIELD_INTROTEXTLIMIT_DESC="Please enter in a numeric character limit value. The introtext will be trimmed to the number of characters you enter." 
+JGLOBAL_ARCHIVE_ARTICLES_FIELD_INTROTEXTLIMIT_LABEL=" Intro text Limit"
+JGLOBAL_ARCHIVE_OPTIONS="Archive Options"
 JGLOBAL_ARTICLE_COUNT_DESC="Whether to show or hide a count of articles in each category."
 JGLOBAL_ARTICLE_COUNT_LABEL="Article Count"
 JGLOBAL_ARTICLE_MANAGER_ORDER="Ordering"
