@@ -9,11 +9,11 @@ MOD_MENU_FIELD_ALLCHILDREN_DESC="Expand the menu and make its sub-menu items alw
 MOD_MENU_FIELD_ALLCHILDREN_LABEL="Show Sub-menu Items"
 MOD_MENU_FIELD_CLASS_DESC="A suffix to be applied to the CSS class of the menu items"
 MOD_MENU_FIELD_CLASS_LABEL="Menu Class Suffix"
-MOD_MENU_FIELD_ENDLEVEL_DESC="Level to stop rendering the menu at."
+MOD_MENU_FIELD_ENDLEVEL_DESC="Level to stop rendering the menu at. If you choose 'All', all levels will be shown depending on 'Show Sub-menu Items' setting."
 MOD_MENU_FIELD_ENDLEVEL_LABEL="End Level"
 MOD_MENU_FIELD_MENUTYPE_DESC="Select a menu in the list"
 MOD_MENU_FIELD_MENUTYPE_LABEL="Select Menu"
-MOD_MENU_FIELD_STARTLEVEL_DESC="Level to start rendering the menu at."
+MOD_MENU_FIELD_STARTLEVEL_DESC="Level to start rendering the menu at. Setting the start and end levels to the same # and setting 'Show Sub-menu Items' to yes will only display that single level."
 MOD_MENU_FIELD_STARTLEVEL_LABEL="Start Level"
 MOD_MENU_FIELD_TAG_ID_DESC="An ID attribute to assign to the root UL tag of the menu (optional)"
 MOD_MENU_FIELD_TAG_ID_LABEL="Menu Tag ID"
